...
              <NativeTabs.Trigger.VectorIcon family={Ionicons} name="mail" />
            ),
          }}
        />
      </NativeTabs.Trigger>
      <NativeTabs.Trigger name="plans" contentStyle={{ backgroundColor: colors.background }}>
        <NativeTabs.Trigger.Label>Plans</NativeTabs.Trigger.Label>
        <NativeTabs.Trigger.Icon
          sf={{ default: 'calendar', selected: 'calendar.circle.fill' }}
          src={{
            default: (
              <NativeTabs.Trigger.VectorIcon
                family={Ionicons}
...
